# check-deps

./: .gitignore  application.yaml  docker-compose.yaml  start.py
.zed/: settings.json
backend/: Cargo.toml  Dockerfile  application.yaml  entrypoint.sh
backend/app/: Cargo.toml
backend/app/src/: api.rs  app.rs  auth.rs  common.rs  config.rs  database.rs  entity.rs  id.rs  lib.rs  logger.rs  main.rs  neo4j.rs  params.rs  serde.rs  server.rs
backend/app/src/api/: packages.rs  projects.rs
backend/app/src/api/projects/: register.rs
backend/app/src/auth/: middleware.rs  service.rs
backend/app/src/common/: error.rs  latency.rs  response.rs
backend/app/src/config/: auth.rs  jwt.rs  languages.rs  logger.rs  neo4j.rs  s3.rs  server.rs
backend/app/src/entity/: direct_dependency.rs  package.rs  project.rs  scan.rs
backend/app/src/params/: json.rs  pagination.rs  path.rs  query.rs  valid.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: config.rs  database.rs  main.rs
backend/src/config/: logger.rs
src/: entity.rs
src/config/: database.rs  server.rs
