[package]
name = "check-deps"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["macros"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
quick-xml = { version = "0.38.4", features = ["serialize"] }
toml = { version = "0.9.8", features = ["preserve_order", "parse"] }
reqwest = { version = "0.12.24", features = [
    "json",
    "gzip",
    "stream",
    "rustls-tls",
] }
regex = { version = "1.12.2" }
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }
sea-orm = { version = "~2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio",
    "with-chrono",
    "debug-print",
    "with-rust_decimal",
] }
num_cpus = { version = "1.17.0" }
