[package]
name = "check-deps"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "check-deps"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["macros"] }
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
quick-xml = { version = "0.38.4", features = ["serialize"] }
toml = { version = "0.9.8", features = ["preserve_order", "parse"] }
reqwest = { version = "0.12.25", features = [
    "json",
    "gzip",
    "stream",
    "rustls-tls",
] }
regex = { version = "1.12.2" }
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio",
    "with-chrono",
    "debug-print",
    "with-rust_decimal",
] }
num_cpus = { version = "1.17.0" }
tower-http = { version = "0.6.8", features = [
    "trace",
    "timeout",
    "limit",
    "cors",
    "normalize-path",
    "auth",
] }
xid = "1.1.1"
bytesize = "2.3.1"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
idgenerator = { version = "2.0.0" }
bcrypt = { version = "0.17.1" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
packageurl = { version = "0.6.0"}
git2 = { version = "0.20.3"}
walkdir = {version = "2.5.0"}
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 ={ version = "1.117.0"}
tar ={ version = "0.4.44"}
flate2 ={ version = "1.1.5"}
chrono = { version = "0.4.39", features = ["clock", "serde"] }
neo4rs = "0.8"
migration = { path = "../migration" }
