[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "migrate"
path = "src/main.rs"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "~2.0.0-rc"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio",
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "with-chrono",
  "with-rust_decimal",
]
